* Moved libwandevent3 into trunk

--- a/README
+++ b/README
@@ -3,7 +3,7 @@ Libwandevent -  A handy event-handling environment used by a variety of
 		Waikato, New Zealand.
 
 ------------------------------------------------------------------------------
-Libwandevent is Copyright (c) 2009 The University of Waikato, Hamilton, 
+Libwandevent is Copyright (c) 2009-2013 The University of Waikato, Hamilton, 
 New Zealand. All rights reserved.
 
 This code has been developed by the University of Waikato WAND research group.
